# cockpit

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  BUILD_GUIDE.sh  BUILD_PACKAGING_ANALYSIS.md  DEPLOYMENT.md  DISTRIBUTION.md.old  INSTALL.md  INSTALLATION_FIX.md  README.md  REFACTOR_FRONTEND.md  REFACTOR_SUMMARY.md  TODO.md  TODO.md.old  TODO_OLD_BACKUP.md  build.sh  build.txt  build_dependency.md  cron-job.txt  install.sh  package-quick.sh  package.sh  research.md  uninstall.sh
backend/: AGENTS.md  Cargo.toml  build-frontend.sh  build.rs  check_tasks.sql  cockpit.desktop  dev-frontend.sh  postinst.sh  tauri.conf.json  test_rotation.rs
backend/capabilities/: default.json
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m001_initial_schema.rs  m002_app_settings.rs  m003_performance_indexes.rs  m004_feed_sources.rs  m005_idea_references.rs  m006_writing_knowledge_graph.rs  m007_notes_unique_main.rs  m008_fix_writing_idea_links.rs  m009_research_connectors.rs  m010_reader_cockpit.rs
backend/migrations/: 001_initial_schema_down.sql  001_initial_schema_up.sql  002_app_settings_down.sql  002_app_settings_up.sql  003_performance_indexes_down.sql  003_performance_indexes_up.sql  004_feed_sources_down.sql  004_feed_sources_up.sql  005_idea_references_down.sql  005_idea_references_up.sql
backend/src/: config.rs  config.rs.backup  crypto.rs  db.rs  db.rs.backup  db_backup.rs  errors.rs  ideas.rs  logging.rs  logging.rs.backup  main.rs  migrations.rs  news.rs  news_articles.rs  news_sources.rs  scheduler.rs  settings.rs  storage.rs  system_tasks.rs
backend/src/bridge/: dispatch.rs  http.rs  mod.rs
backend/src/connectors/: mod.rs  newsdata.rs
backend/src/core/: commands.rs  mod.rs
backend/src/core/components/: config.rs  crypto.rs  db.rs  db_backup.rs  events.rs  logging.rs  migrations.rs  mod.rs  reader.rs  settings.rs  setup.rs  setup_wizard.rs  (+2 more)
backend/src/notes/: commands.rs  mod.rs
backend/src/research/: commands.rs  dto.rs  helpers.rs  mod.rs
backend/src/system/: commands.rs  mod.rs
backend/src/util/: commands.rs  mod.rs
backend/src/writing/: commands.rs  dto.rs  mod.rs  service.rs  text.rs
backend/storage/data/: db-orig.sql  db-orig1.sql  db.sql
backend/tests/: http_bridge.rs
(+436 files in other folders)
