[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.5.3", features = [] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
whoami = "1.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-cron-scheduler = "0.9"
sea-orm = { version = "0.12.15", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "with-chrono"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
aes-gcm = { version = "0.10", features = ["alloc"] }
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
