[package]
name = "cockpit"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.5.3", features = ["webview-data-url", "unstable"] }
tauri-plugin-dialog = "2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
whoami = "1.5.2"
chrono = { version = "0.4.38", features = ["serde"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "time"] }
tokio-cron-scheduler = "0.15"
sea-orm = { version = "1.1", features = ["macros", "runtime-tokio-rustls", "sqlx-sqlite", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
migration = { path = "migration" }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
regex = "1.11"
html2md = "0.2"
async-trait = "0.1"
ammonia = "4.0"
scraper = "0.19"
aes-gcm = { version = "0.10", features = ["alloc"] }
rand = "0.9"
rand_core = "0.9"
hex = "0.4"
zeroize = "1.7"
dotenvy = "0.15"
base64 = "0.22"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi", "json"] }
tracing-appender = "0.2"
dirs = "5.0"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
